# Answer-Protocol

./: .gitignore  Cargo.toml  Makefile  test.yaml
backend/: Cargo.toml  test.yaml
backend/src/: broadcast.rs  chat.rs  client.rs  group.rs  items.rs  look.rs  main.rs  move_cmd.rs  quest.rs  state.rs  talk.rs  validate.rs  who.rs
frontend/: Cargo.toml
frontend/src/: action_game.rs  app.rs  auth.rs  main.rs  parser.rs  window.rs
frontend/src/game_mod/: room_1.rs  room_2.rs  room_3.rs  room_4.rs  state_mod.rs
frontend/src/room/: room_2.rs  room_3.rs  room_4.rs  room_5.rs  room_6.rs  room_7.rs  room_8.rs  state_mod.rs
src/: client.rs  main.rs  server.rs  state.rs  validate.rs
